--- a/package.json
+++ b/package.json
@@ -1,10 +1,21 @@
 {
-  "name": "thedish",
+  "name": "TheDish",
   "private": true,
   "scripts": {
     "start": "meteor run"
   },
   "dependencies": {
-    "meteor-node-stubs": "~0.2.0"
+    "angular": "^1.5.8",
+    "angular-animate": "^1.5.8",
+    "angular-ecmascript": "0.0.3",
+    "angular-meteor": "^1.3.11",
+    "angular-meteor-auth": "^1.0.3",
+    "angular-moment": "^1.0.0-beta.6",
+    "angular-sanitize": "^1.5.8",
+    "angular-ui-router": "^0.2.18",
+    "angular-validation": "^1.4.2",
+    "ionic-scripts": "0.0.1",
+    "meteor-node-stubs": "~0.2.0",
+    "moment": "^2.15.1"
   }
 }
