--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "angular-animate": "^1.5.8",
     "angular-ecmascript": "0.0.3",
     "angular-meteor": "^1.3.11",
-    "angular-meteor-auth": "^1.0.3",
-    "angular-moment": "^1.0.0-beta.6",
+    "angular-meteor-auth": "^1.1.1",
+    "angular-moment": "^1.0.0",
     "angular-sanitize": "^1.5.8",
     "angular-ui-router": "^0.2.18",
     "angular-validation": "^1.4.2",
     "ionic-scripts": "0.0.1",
     "meteor-node-stubs": "~0.2.0",
+    "mime": "^1.3.4",
     "moment": "^2.15.1",
     "multer": "^1.2.0",
     "ng-cordova": "^0.1.27-alpha"
