--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mime": "^1.3.4",
     "moment": "^2.15.1",
     "multer": "^1.2.0",
-    "ng-cordova": "^0.1.27-alpha"
+    "ng-cordova": "^0.1.27-alpha",
+    "vintagejs": "^1.1.5"
   }
 }
