--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "angucomplete-alt": "^2.5.0",
     "angular": "^1.5.8",
     "angular-animate": "^1.5.8",
     "angular-ecmascript": "0.0.3",
