--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "angucomplete-alt": "^2.5.0",
     "angular": "^1.5.8",
     "angular-animate": "^1.5.8",
     "angular-ecmascript": "0.0.3",
@@ -18,6 +19,7 @@
     "mime": "^1.3.4",
     "moment": "^2.15.1",
     "multer": "^1.2.0",
+    "ng-infinite-scroll": "^1.3.0",
     "vintagejs": "^1.1.5"
   }
 }
